Se han añadido todas las actividades de la app, la navegación, funciones de la bbdd y su icono

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,12 +6,18 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/notites_logo"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/notites_logo"
         android:supportsRtl="true"
         android:theme="@style/Theme.Material3.DayNight.NoActionBar"
         tools:targetApi="31">
+        <activity
+            android:name=".NoteInfoActivity"
+            android:exported="false" />
+        <activity
+            android:name=".DeleteAllNotesActivity"
+            android:exported="false" />
         <activity
             android:name=".AddNoteActivity"
             android:exported="false" />
