Recarga de la lista de tares cada vez que se abre la actividad, correciones modo oscuro y se han añadido traducciones al inglés y catalán

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,8 +10,10 @@
         android:label="@string/app_name"
         android:roundIcon="@drawable/notites_logo"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Material3.DayNight.NoActionBar"
-        tools:targetApi="31">
+        android:theme="@style/Base.Theme.Notites"
+        tools:targetApi="31"
+        android:locale="es">
+
         <activity
             android:name=".NoteInfoActivity"
             android:exported="false" />
